[package]
name = "x264-framing"
description = "Encoding video into the H.264 format."
keywords = ["x264", "encoding", "h264", "video", "encoder"]
repository = "https://github.com/endogeny/x264-framing"
documentation = "https://docs.rs/x264-framing"
license = "MIT"
version = "0.1.0"
authors = ["Ram <quadrupleslap@gmail.com>"]

[dependencies]
framing = "0.6"
x264-sys = "0.1"
